--- a/latex/main.tex
+++ b/latex/main.tex
@@ -36,6 +36,7 @@
 \usepackage{minted}
 %\usepackage[thinlines]{easytable}
 \usepackage{amsmath}
+\usepackage{todonotes}
 
 %\captionsetup[subfigure]{font=large}
 
@@ -192,7 +193,7 @@ I hereby declare that I have written this thesis by myself, only with help of re
 \newpage
 \thispagestyle{empty}
 \chapter*{Acknowledgement}\label{chap:thank_you}
-First, I would like to express my gratitude to Mgr. Ľubomír Firment for his guidance during the whole thesis and invaluable expertise in astronomy that made this thesis possible. I’d also like to thank my supervisor prof. RNDr. Richard Ostertág, PhD. for his insightful feedback.
+First, I would like to express my gratitude to Mgr. Ľubomír Firment for his guidance during the whole thesis and invaluable expertise in Kubernetes that made this thesis possible. I'd also like to thank my supervisor prof. RNDr. Richard Ostertág, PhD. for his insightful feedback.
 
 
 \vfill\eject 
