--- a/latex/terminology.tex
+++ b/latex/terminology.tex
@@ -1,5 +1,7 @@
 \chapter*{Terminology}
 
+\todo{Add terms and abbreviations as we encounter them in our text.}
+
 \section*{Terms}
 
 \begin{itemize}
