--- a/latex/motivation.tex
+++ b/latex/motivation.tex
@@ -2,13 +2,11 @@
 % spomenut vysledky  v clanku 
 % preco sme sa rozhodli spravit tuto pracu
 
-With a current upward trend in rocket launches and deployment missions, the population of resident space objects has increased rapidly. Due to the imperfections of our technology, we are unable to launch satellites into orbit without leaving behind fragments, rocket bodies and payloads, which gives a rise to the space debris environment. Moreover, more than 30 \% of satellites orbiting Earth are no longer functioning \cite{ESAarticle3}. As the space debris population is rising, the need for regular monitoring is essential. The detection of debris allows us to predict its position and actively avoid collisions. It may also help in future missions that aim to collect space debris. 
+As the world's biggest corporations start grasping the power of the Cloud Computing, stakeholders are raising concerns regarding the security of the most popular and accessible Container Orchestration platform - Kubernetes. Opinion of the experts on this matter varies significantly and this paper aims to make a contribution to this dispute by determining how well can be Kubernetes cluster's security monitored.
 
-While many solutions to space object detection were already proposed, the majority of them focus on analytical methods. However, the immense amount of data acquired from the space observations, calls for an automatic and more robust technique - machine learning. 
+We compare and evaluate the capabilities of the most popular security tools designed specifically for Kubernetes against official and unofficial Kubernetes security recommendations.
 
-In our thesis, we focus on the recognition of astronomical objects with unique features such as streaks, diffuse sources and contaminations on the CCD image. 
-For this purpose, we have designed a convolutional neural network, that classifies images based on the astronomical objects present in them. To train our network with a sufficient amount of data we have implemented a data simulator that generates synthetic astronomical images. The results of our thesis have also been published in the article \cite{soi2022} and presented at the 3rd IAA Conference on Space Situational Awareness.  
-
+\todo{add results}
 
 %The proposed system is our own convolutional neural network, that extracts features from the images and classifies them based on the object 
 
