Updates to the introduction chapter (#25)

--- a/latex/introduction/introduction.tex
+++ b/latex/introduction/introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 
 \input{introduction/kubernetes}
-%\input{introduction/deep_learning}
+\input{introduction/security_automation}
 %\input{introduction/space_object_recognition}
 
 
