--- a/latex/terminology.tex
+++ b/latex/terminology.tex
@@ -1,7 +1,5 @@
 \chapter*{Terminology}
 
-\todo{Add terms and abbreviations as we encounter them in our text.}
-
 \section*{Terms}
 
 \begin{itemize}
@@ -11,6 +9,8 @@
     \setlength\itemsep{1px}
     \item \textbf{Cloud} \\
     Term "Cloud" is ususally used to describe an array of (remote, on-premise or hybrid) servers that operate as a single ecosystem used for various hosting services.
+    \item \textbf{Cloud provider} \\
+    A cloud provider is a company that offers cloud computing services, which include resources like storage, processing power, networking, databases, and software, delivered over the internet.
 \end{itemize}
 
 \section*{Abbreviations}
@@ -21,6 +21,16 @@
     \item \textbf{OS} - Operating System.
     \item \textbf{VM} - Virtual Machine.
     \item \textbf{CI/CD} - Continuous Integration/Continuous Deployment.
+    \item \textbf{RBAC} - Role Based Access Control.
+    \item \textbf{AWS} - Amazon Web Services.
+    \item \textbf{TLS} - Transport Layer Security.
+    \item \textbf{CSRF} - Cross Site Request Forgery.
+    \item \textbf{XSS} - Cross Site Scripting.
+    \item \textbf{OWASP} - The Open Worldwide Application Security Project.
+    \item \textbf{TCP} - Transmission Control Protocol.
+    \item \textbf{API} - Application Programming Interface.
+    \item \textbf{NFS} - Network File System.
+    \item \textbf{iSCSI} - Internet Small Computer Systems Interface.
 \end{itemize}
 
 
